@@ -12,6 +12,7 @@ File::Path        = 2.08
 File::ReadBackwards = 1.05
 Hash::Merge       = 0.12
 JSON::MaybeXS     = 1.001000
+Module::Pluggable = 3.9
 Module::Runtime   = 0.013
 Moo               = 1.004002
 MooX::ClassStash  = 0.005
